deploy/route-grpc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wisdom
  namespace: wisdom-dev
  labels:
    app: wisdom
    app.kubernetes.io/component: wisdom
    app.kubernetes.io/instance: wisdom
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: wisdom-wisdom-dev-grpc.apps.dev.wisdom.testing.ansible.com
  to:
    kind: Service
    name: wisdom
    weight: 100
  port:
    targetPort: 7070-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
